--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header card-header-primary d-flex justify-content-between">
+  <div class="card-header card-header-info d-flex justify-content-between">
     <div>
       <h3 class="card-title ">Bills</h3>
       <p class="card-category">List of Bills</p>
@@ -32,7 +32,7 @@
       </div>
     </div>
     <!-- Create a new bill -->
-    <button class="btn btn-success w-100" [routerLink]="'/newbill'">Add new Bill
+    <button class="btn btn-warning w-100" [routerLink]="'/newbill'">Add new Bill
       <i class="material-icons align-text-center pl-3">article</i>
     </button>
     <!-- Bill list (modify status: new to paid, delete: no) -->
