--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12">
         <div class="card">
-            <div class="card-header card-header-primary d-flex justify-content-between">
+            <div class="card-header card-header-success d-flex justify-content-between">
                 <div>
                     <h3 class="card-title ">Customers</h3>
                     <p class="card-category">List of Customers</p>
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn btn-success w-100" [routerLink]="'0'">Add new Customer
+                <button class="btn btn-warning w-100" [routerLink]="'0'">Add new Customer
                     <i class="material-icons align-text-center pl-3">person_add</i>
                 </button>
                 <div class="table-responsive">
