--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header card-header-primary d-flex justify-content-between">
+  <div class="card-header card-header-danger d-flex justify-content-between">
     <div>
       <h3 class="card-title ">Orders</h3>
       <p class="card-category">List of Orders</p>
@@ -32,7 +32,7 @@
         </select>
       </div>
     </div>
-    <button class="btn btn-success w-100" [routerLink]="'0'">Add new Order
+    <button class="btn btn-warning w-100" [routerLink]="'0'">Add new Order
       <i class="material-icons align-text-center pl-3">post_add</i>
     </button>
     <div class="table-responsive">
