--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="col-12">
-          <button class="btn btn-success w-100" [routerLink]="'0'">Add New Product
+          <button class="btn btn-warning w-100" [routerLink]="'0'">Add New Product
             <i class="material-icons align-text-center pl-3">add_shopping_cart</i>
           </button>
           <div class="table-responsive">
