--- a/src/app/pages/bill-list/bill-list.component.scss
+++ b/src/app/pages/bill-list/bill-list.component.scss
@@ -1,53 +1,66 @@
 .input-group {
-    &-append {
-        opacity: 100%;
-        animation-name: appear;
-        animation-duration: 2s;
-    }
+  &-append {
+    opacity: 100%;
+    animation-name: appear;
+    animation-duration: 2s;
+  }
 
-    &-text {
-        font-size: 18px;
-    }
+  &-text {
+    font-size: 18px;
+  }
 }
 
 @keyframes appear {
-    0% {opacity: 50%;}
-    50% {opacity: 75%;}
-    100% {opacity: 100%;}
+  0% {
+    opacity: 50%;
+  }
+
+  50% {
+    opacity: 75%;
+  }
+
+  100% {
+    opacity: 100%;
+  }
 }
 
 th>i.material-icons {
-    cursor:pointer;
+  cursor: pointer;
 }
 
 .hidden {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 .btn-small-text {
-    display: inline;
-    font-size: 80%;
-    position: relative;
-    top: -5%;
+  display: inline;
+  font-size: 80%;
+  position: relative;
+  top: -5%;
 }
 
 .table-bill {
 
-    &__th {
-      &--id {
-        min-width: 60px;
-      }
+  &__th {
+    &--id {
+      min-width: 60px;
+    }
 
-      &--orderId {
-        min-width: 110px;
-      }
-  
-      &--amount {
-        min-width: 110px;
-      }
-  
-      &--status {
-        min-width: 100px;
-      }
+    &--orderId {
+      min-width: 110px;
+    }
+
+    &--amount {
+      min-width: 110px;
+    }
+
+    &--status {
+      min-width: 100px;
     }
   }
+}
+
+.form-control,
+.is-focused .form-control {
+  background-image: linear-gradient(0deg, #00bcd4 2px, rgba(156, 39, 176, 0) 0), linear-gradient(0deg, #d2d2d2 1px, hsla(0, 0%, 82%, 0) 0);
+}
