--- a/src/app/pages/customer-edit/customer-edit.component.scss
+++ b/src/app/pages/customer-edit/customer-edit.component.scss
@@ -14,3 +14,11 @@
   box-shadow: none;
   cursor: not-allowed;
 }
+
+.form-control, .is-focused .form-control {
+  background-image: linear-gradient(
+0deg
+,#47a44b 2px,rgba(156,39,176,0) 0),linear-gradient(
+0deg
+,#d2d2d2 1px,hsla(0,0%,82%,0) 0);
+}
