--- a/src/app/pages/order-edit/order-edit.component.scss
+++ b/src/app/pages/order-edit/order-edit.component.scss
@@ -1,18 +1,18 @@
-@keyframes error {
-    0%   {opacity: 0%;}
-    25%  {opacity: 25%;}
-    50%  {opacity: 50%;}
-    100% {opacity: 100%;}
-}
-
 .error-message {
     color: rgb(226, 62, 62);
-    opacity: 100%;
-    animation-name: error;
-    animation-duration: .5s;
+    transition: all ease-in .4s;
 }
 
 .btn-block:disabled{
     box-shadow: none;
     cursor: not-allowed;
   } 
+
+  .form-control, .is-focused .form-control {
+    background-image: linear-gradient(
+  0deg
+  ,#fb8c00 2px,rgba(156,39,176,0) 0),linear-gradient(
+  0deg
+  ,#d2d2d2 1px,hsla(0,0%,82%,0) 0);
+  }
+
