--- a/src/app/pages/order-list/order-list.component.scss
+++ b/src/app/pages/order-list/order-list.component.scss
@@ -43,18 +43,31 @@ table {
 
 .input-group {
   &-append {
-      opacity: 100%;
-      animation-name: appear;
-      animation-duration: 2s;
+    opacity: 100%;
+    animation-name: appear;
+    animation-duration: 2s;
   }
 
   &-text {
-      font-size: 18px;
+    font-size: 18px;
   }
 }
 
 @keyframes appear {
-  0% {opacity: 50%;}
-  50% {opacity: 75%;}
-  100% {opacity: 100%;}
+  0% {
+    opacity: 50%;
+  }
+
+  50% {
+    opacity: 75%;
+  }
+
+  100% {
+    opacity: 100%;
+  }
+}
+
+.form-control,
+.is-focused .form-control {
+  background-image: linear-gradient(0deg, #e53935 2px, rgba(156, 39, 176, 0) 0), linear-gradient(0deg, #d2d2d2 1px, hsla(0, 0%, 82%, 0) 0);
 }
