--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xl-3 col-md-6 col-sm-6 pr-0">
       <div class="card card-stats dash-card">
-        <div class="card-header card-header-warning card-header-icon">
+        <div class="card-header card-header-primary card-header-icon">
           <div class="card-icon">
             <i class="material-icons">theaters</i>
           </div>
@@ -80,7 +80,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card card-chart">
-        <div class="card-header card-header-warning">
+        <div class="card-header card-header-primary">
           <app-chart *ngIf="productsCount && activeProductsCount" [chartTitle]="'Products'" [data]="[{ name: 'Active', value: activeProductsCount },
              { name: 'Inactive', value: productsCount - activeProductsCount }]">
           </app-chart>
