--- a/src/app/common/sidebar/sidebar.component.scss
+++ b/src/app/common/sidebar/sidebar.component.scss
@@ -1,7 +1,8 @@
-// .sidebar[data-color=purple] li.active>a {
-//     background-color: #9c27b0;
-//     box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(156 39 176 / 40%);
-// }
+
+.sidebar li:first-child.active>a {
+    background-color: #fb8c00;
+    box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(76 175 80 / 40%);
+}
 .sidebar li:nth-child(2).active>a {
     background-color: #47a44b;
     box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(76 175 80 / 40%);
