--- a/src/app/pages/order-edit/order-edit.component.html
+++ b/src/app/pages/order-edit/order-edit.component.html
@@ -30,7 +30,7 @@
           [style.visibility]="(orderForm.controls.customerID?.value && orderForm.controls.customerID?.value['id'] === 0 && orderForm.controls.customerID.touched) ||
             (orderForm.controls.customerID?.dirty && orderForm.controls.customerID?.invalid) ? 'visible' : 'hidden'"
           class="error-message">
-              Customer ID is required, please select.
+            Please select Customer from the list.
             </div>         
           </div>
           <div class="mt-4">
@@ -52,7 +52,7 @@
           [style.visibility]="(orderForm.controls.productID?.value && orderForm.controls.productID?.value['id'] === 0 && orderForm.controls.productID.touched) ||
             (orderForm.controls.productID?.dirty && orderForm.controls.productID?.invalid) ? 'visible' : 'hidden'"
           class="error-message">
-              Product ID is required, please select.
+            Please select Product from the list.
             </div>         
           </div>
           <div class="mt-4">
