--- a/src/app/pages/new-bill/new-bill.component.scss
+++ b/src/app/pages/new-bill/new-bill.component.scss
@@ -1,5 +1,9 @@
 select {
-    font-size: 18px;
-    text-align-last:center;
+    //font-size: 18px;
+    text-align-last: center;
     height: auto;
+}
+
+option {
+    padding: 2px;
 }
