--- a/src/app/pages/customer-list/customer-list.component.scss
+++ b/src/app/pages/customer-list/customer-list.component.scss
@@ -88,3 +88,16 @@
 0deg
 ,#d2d2d2 1px,hsla(0,0%,82%,0) 0);
 }
+
+@keyframes rotate {
+    from {transform: rotate(0deg)}
+    to {transform: rotate(360deg)}
+}
+.refresh-start {
+    animation-name: rotate;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-play-state: running;
+    
+}
